Selected country text matches selected country color; fixed a bug with horizontal shift for hovertext

--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ h1 {
 
 #countryName {
   display: inline;
-  color: blue;
 }
 
 #selectedCountrySimilarities {
